fix: unsaved changes dot not visible in tabs (#3889)

--- a/app/src/componentsV2/Tabs/components/tabsContainer.scss
+++ b/app/src/componentsV2/Tabs/components/tabsContainer.scss
@@ -239,7 +239,7 @@
 
     .tab-actions {
       flex-shrink: 0;
-      display: none;
+      display: flex;
       align-items: center;
       justify-content: center;
       position: absolute;
